--- a/SIME/index.html
+++ b/SIME/index.html
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="columns is-centered has-text-centered">
-          <div class="column is-two-thirds">
+          <div class="column is-four-fifths">
             <div style="text-align: right;">
               <img id="model" src="static/images/pipeline.svg" width="100%"></img>
             </div>
