--- a/SIME/index.html
+++ b/SIME/index.html
@@ -379,7 +379,15 @@
       </div>
       <!-- <h2 class="title">BibTeX</h2> -->
       <pre><code>
-        BibTex Code Here
+@misc{jin2025sime,
+    title={SIME: Enhancing Policy Self-Improvement with Modal-level Exploration}, 
+    author={Yang Jin and Jun Lv and Wenye Yu and Hongjie Fang and Yong-Lu Li and Cewu Lu},
+    year={2025},
+    eprint={2505.01396},
+    archivePrefix={arXiv},
+    primaryClass={cs.RO},
+    url={https://arxiv.org/abs/2505.01396}, 
+}
       </code></pre>
     </div>
   </section>
