--- a/SIME/index.html
+++ b/SIME/index.html
@@ -70,7 +70,7 @@
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <sup>1</sup>Shanghai Jiao Tong University,
-                <sup>2</sup>Shanghai Innovation Institution,
+                <sup>2</sup>Shanghai Innovation Institute,
                 <sup>3</sup>Noematrix Ltd.</span>
               <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
             </div>
