SOE google analytics setup

--- a/SOE/index.html
+++ b/SOE/index.html
@@ -13,14 +13,14 @@
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-K9CE533DRS"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1MVEHKBHH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-K9CE533DRS');
-  </script> -->
+    gtag('config', 'G-G1MVEHKBHH');
+  </script>
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
