update SOE arxiv

--- a/SOE/index.html
+++ b/SOE/index.html
@@ -81,15 +81,15 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
-                <!-- <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2505.01396.pdf" target="_blank"
+                <span class="link-block">
+                  <a href="https://arxiv.org/pdf/2509.19292.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
                     <span>Paper</span>
                   </a>
-                </span> -->
+                </span>
 
                 <!-- Supplementary PDF link -->
                 <!-- <span class="link-block">
@@ -114,15 +114,15 @@
                 </span>
 
                 <!-- ArXiv abstract Link -->
-                <!-- <span class="link-block">
-                  <a href="https://arxiv.org/abs/2505.01396" target="_blank"
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/2509.19292" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
                     <span>arXiv</span>
                   </a>
-                </span> -->
+                </span>
               </div>
             </div>
           </div>
@@ -304,15 +304,15 @@
       </div>
       <!-- <h2 class="title">BibTeX</h2> -->
       <pre><code>
-<!-- @misc{jin2025sime,
-    title={SIME: Enhancing Policy Self-Improvement with Modal-level Exploration}, 
-    author={Yang Jin and Jun Lv and Wenye Yu and Hongjie Fang and Yong-Lu Li and Cewu Lu},
-    year={2025},
-    eprint={2505.01396},
-    archivePrefix={arXiv},
-    primaryClass={cs.RO},
-    url={https://arxiv.org/abs/2505.01396}, 
-} -->
+@misc{jin2025soe,
+      title={SOE: Sample-Efficient Robot Policy Self-Improvement via On-Manifold Exploration}, 
+      author={Yang Jin and Jun Lv and Han Xue and Wendi Chen and Chuan Wen and Cewu Lu},
+      year={2025},
+      eprint={2509.19292},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2509.19292}, 
+}
       </code></pre>
     </div>
   </section>
