--- a/SIME/index.html
+++ b/SIME/index.html
@@ -64,7 +64,7 @@
               <span class="author-block">
                 <a href="https://dirtyharrylyl.github.io" target="_blank">Yong-Lu Li</a><sup>1,2</sup>, </span>
               <span class="author-block">
-                <a href="https://www.mvig.org" target="_blank">Cewu Lu</a><sup>1,2,3</sup>, </span>
+                <a href="https://www.mvig.org" target="_blank">Cewu Lu</a><sup>1,2,3</sup></span>
             </div>
 
             <div class="is-size-5 publication-authors">
