--- a/SOE/index.html
+++ b/SOE/index.html
@@ -67,7 +67,7 @@
               <span class="author-block">
                 <a href="https://alvinwen428.github.io" target="_blank">Chuan Wen</a><sup>1\(\dagger\)</sup>, </span>
               <span class="author-block">
-                <a href="https://www.mvig.org" target="_blank">Cewu Lu</a><sup>1,2,3\(\dagger\)</sup>, </span>
+                <a href="https://www.mvig.org" target="_blank">Cewu Lu</a><sup>1,2,3\(\dagger\)</sup></span>
             </div>
 
             <div class="is-size-5 publication-authors">
